# phecda

./: .gitignore  CMakeLists.txt  README.md  carbin_deps.txt
carbin_cmake/: carbin_module.cmake
cmake/: phekda_cpack_config.cmake  phekda_deps.cmake
examples/: CMakeLists.txt
examples/hnswlib/: CMakeLists.txt  EXAMPLES.md  example_filter.cpp  example_mt_filter.cpp  example_mt_replace_deleted.cpp  example_mt_search.cc  example_mt_search.cpp  example_replace_deleted.cpp  example_search.cpp  filter_example.cc  mt_filter_example.cc
phekda/: CMakeLists.txt  unified.cc  unified.h
phekda/conditions/: bitmap_condition.cc  bitmap_condition.h
phekda/core/: aligned_allocator.h  config.h  defines.h  search_condition.h  search_context.h
phekda/hnswlib/: README.md  bruteforce.h  hnswalg.h  hnswlib.h  index.cc  index.h  space_ip.h  space_l2.h  visited_list_pool.h
tests/: CMakeLists.txt
tests/hnswlib/: CMakeLists.txt  knn_with_flat_filter_test.cc  knn_with_hnsw_filter_test.cc  multi_thread_load_test.cc  multi_thread_replace_test.cc  save_load_test.cc  search_knn_closer_first_test.cc  search_knn_with_filter_test.cc  sift_1b.cpp  sift_test.cpp  updates_test.cc
